# JiMP2

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: Tree.cpp  Tree.h
lab12/treeiterators/: TreeIterators.h
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  CMakeLists.txt  main.cpp
lab2/Array2D/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/array2d/: Array2D.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp  polybius.cpp
lab2/simpleforwardlist/: CMakeLists.txt  SimpleForwardList.cpp  SimpleForwardList.h  main.cpp  simpleforwardlist.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  main.cpp  xorcypherbreaker.cpp  xorcypherbreaker.h
lab3/ccounter/: CCounter.cpp  CCounter.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/: CMakeLists.txt
lab4/Square/: Square.cpp  Square.h  main.cpp
lab4/point/: Point.cpp  Point.h  main.cpp
lab4/simplejson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/simpletemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab6/point/: Point.cpp  Point.h
lab6/zipper/: Zipper.cpp  Zipper.h  main.cpp
lab7/Iterable/: Iterable.h  main.cpp
lab7/arrayfill/: ArrayFill.cpp  ArrayFill.h  CMakeLists.txt  main.cpp
lab7/iterable/: Iterable.cpp
lab8/moviesubtitles/: MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
lab8/pesel/: CMakeLists.txt  Pesel.cpp  Pesel.h  main.cpp
lab9/academiaserializer/: Serialization.cpp  Serialization.h  main.cpp
tests/: CMakeLists.txt
tests/exampletest/: CMakeLists.txt
tests/lab13test/: ArabicToRomanTest.cpp
tests/lab1test/: CMakeLists.txt  FactorialTest.cpp
tests/lab5test/: MatrixTest.cpp
tests/lab7test/: CMakeLists.txt  IterableEnumerationTest.cpp  IterableProductTest.cpp  IterableTest.cpp  IterableZipperIteratorTest.cpp  IterableZipperTest.cpp
tests/lib/memleak/: MemLeakTest.cpp
